--- a/appsettings.json
+++ b/appsettings.json
@@ -10,9 +10,9 @@
     }
   },
   "AllowedHosts": "*",
-  "applicationURL": "https://inventory-omni.azurewebsites.net",
+  "applicationURL": "http://inventory-omni.azurewebsites.net/",
   "ConnectionStrings": {
     //"CrudAPI": "Data Source=Lenovo;Initial Catalog=CrudAPI;Persist Security Info=True;User ID=sa;Password=12345",
-    "InventoryDatabase": "Server=tcp:inventorysqlserver.database.windows.net,1433;Initial Catalog=InventoryDatabase;Persist Security Info=False;User ID=admincjem;Password=@@Win4me@@cj1995;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" 
+    "InventoryDatabase": "Server=tcp:inventorysqlserver.database.windows.net,1433;Initial Catalog=InventoryDatabase;Persist Security Info=False;User ID=admincjem;Password=@@Win4me@@cj1995;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
