Update appsettings.json file.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,18 +1,54 @@
+//{
+//  "AppSettings": {
+//    "Secret": "@@Win4me@@cj19955"
+//  },
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information",
+//      "Microsoft": "Warning",
+//      "Microsoft.Hosting.Lifetime": "Information"
+//    }
+//  },
+//  "AllowedHosts": "*",
+//  "applicationURL": "http://inventory-omni.azurewebsites.net/",
+//  "ConnectionStrings": {
+//    //"CrudAPI": "Data Source=Lenovo;Initial Catalog=CrudAPI;Persist Security Info=True;User ID=sa;Password=12345",
+//    "InventoryDatabase": "Server=tcp:inventorysqlserver.database.windows.net,1433;Initial Catalog=InventoryDatabase;Persist Security Info=False;User ID=admincjem;Password=@@Win4me@@cj1995;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+//  }
+//}
+
 {
+
   "AppSettings": {
     "Secret": "@@Win4me@@cj19955"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "https://inventory-omni.azurewebsites.net",
+      "sslPort": 44310
     }
   },
-  "AllowedHosts": "*",
-  "applicationURL": "http://inventory-omni.azurewebsites.net/",
   "ConnectionStrings": {
     //"CrudAPI": "Data Source=Lenovo;Initial Catalog=CrudAPI;Persist Security Info=True;User ID=sa;Password=12345",
     "InventoryDatabase": "Server=tcp:inventorysqlserver.database.windows.net,1433;Initial Catalog=InventoryDatabase;Persist Security Info=False;User ID=admincjem;Password=@@Win4me@@cj1995;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "profiles": {
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "TestApp": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    }
   }
 }
