--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,17 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "applicationURL": "http://localhost:44317",
+  "AppSettings": {
+    "Secret": "@@Win4me@@cj19955"
+  },
+  "MySettings": {
+    "ConnectionStrings": "Data Source=Lenovo;Initial Catalog=InventoryDB;Persist Security Info=True;User ID=sa;Password=12345",
+    "Email": "my_prod@domain.com",
+    "SMTPPort": "5605"
+  },
+  "ConnectionStrings": {
+    "InventoryDB": "Data Source=Lenovo;Initial Catalog=InventoryDB;Persist Security Info=True;User ID=sa;Password=12345"
   }
 }
