Update appsettings.json file.

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "applicationURL": "http://inventory-omni.azurewebsites.net/",
+  "applicationURL": "http://inventory-omni.azurewebsites.net",
   "AppSettings": {
     "Secret": "@@Win4me@@cj19955"
   },
