Update launchSettings.json file.

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:63612",
+      "applicationUrl": "http://inventory-omni.azurewebsites.net/",
       "sslPort": 44317
     }
   },
