--- a/.drone.yml
+++ b/.drone.yml
@@ -3,14 +3,16 @@ type: docker
 name: Project Build and Deploy
 
 steps:    
- 
   - name: Deploy to Docker Hub  
     image: plugins/docker
-    settings:
-      username: sijaymm
-      password: @@Win4me@@cj1995
+    environment:
+      username:
+        from_secret: username
+      password:
+        from_secret: password
     repo: sijaymm/inventorywebapi
     dockerfile: path/to/Dockerfile
+  
 
 
   - name: Deploy to Heroko
