--- a/.drone.yml
+++ b/.drone.yml
@@ -5,7 +5,7 @@ name: Project Build and Deploy
 steps:    
   - name: Deploy to Docker Hub  
     image: plugins/docker
-    environment:
+    settings:
       username:
         from_secret: username
       password:
