--- a/.drone.yml
+++ b/.drone.yml
@@ -7,12 +7,13 @@ steps:
     image: plugins/docker
     settings:
       username:
-        from_secret: username
+      from_secret: username
       password:
-        from_secret: password
-    repo: sijaymm/inventorywebapi
-    dockerfile: path/to/Dockerfile
-    tags: latest
+      from_secret: password
+      repo: sijaymm/inventorywebapi
+      dockerfile: path/to/Dockerfile
+      tags: latest
+      auto_tag: true
   
 
 
