Update CICD deployment.

--- a/.drone.yml
+++ b/.drone.yml
@@ -6,14 +6,11 @@ steps:
   - name: Deploy to Docker Hub  
     image: plugins/docker
     settings:
-      username:
-        from_secret: username
-      password:
-        from_secret: password
-    repo: sijaymm/inventorywebapi
-    dockerfile: path/to/Dockerfile
-    tags: latest
-    auto_tag: true
+      username: sijaymm
+      password: @@Win4me@@cj1995
+      repo: sijaymm/inventorywebapi
+      dockerfile: path/to/Dockerfile
+      tags: latest
   
 
 
