Update .drone.yml file.

--- a/.drone.yml
+++ b/.drone.yml
@@ -6,11 +6,13 @@ steps:
   - name: Deploy to Docker Hub  
     image: plugins/docker
     settings:
-      username: sijaymm
-      password: @@Win4me@@cj1995
-      repo: sijaymm/inventorywebapi
-      dockerfile: path/to/Dockerfile
-      tags: latest
+      username:
+        from_secret: username
+      password:
+        from_secret: password
+    repo: sijaymm/inventorywebapi
+    dockerfile: path/to/Dockerfile
+    
   
 
 
