- Updated project appsettings.json.

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -11,9 +11,9 @@
     "Secret": "@@Win4me@@cj19955"
   },
   "MySettings": {
-    //"ConnectionStrings": "Data Source=Lenovo;Initial Catalog=Omni-Inventory-DB;Persist Security Info=True;User ID=sa;Password=12345" ,
-    "ConnectionStrings": "workstation id=Omni-Inventory-DB.mssql.somee.com;packet size=4096;user id=omnisoftwebapi_SQLLogin_1;pwd=x8nfmtsd31;data source=Omni-Inventory-DB.mssql.somee.com;persist security info=False;initial catalog=Omni-Inventory-DB",
-    "Email": "my_prod@domain.com",
+    "ConnectionStrings": "Data Source=Lenovo;Initial Catalog=SalesPro;Persist Security Info=True;User ID=sa;Password=12345",
+    //"ConnectionStrings": "workstation id=Omni-Inventory-DB.mssql.somee.com;packet size=4096;user id=omnisoftwebapi_SQLLogin_1;pwd=x8nfmtsd31;data source=Omni-Inventory-DB.mssql.somee.com;persist security info=False;initial catalog=Omni-Inventory-DB",
+    //"Email": "my_prod@domain.com",
     "SMTPPort": "5605"
   }
 }
